--- a/1.html
+++ b/1.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<style>
+    a {
+        color : black;
+        text-decoration: none;
+    }
+</style>
 <head>
     <title>WEB1 - HTML</title>
     <meta charset="utf-8">
@@ -9,10 +14,18 @@
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
+        <li><a href="1.html" style = "color : red; text-decoration: underline;">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+    </ol>
+<!--
+    <h1><a href="index.html"><font color = "red">WEB</font></a></h1>
+    <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
+-->
 
     <h2>HTML</h2>
     <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" title="HTML specification" target="_blank_">
