--- a/2.html
+++ b/2.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-
+<style>
+    a {
+        color:black;
+        text-decoration: none;
+    }
+    h1{
+        font-size: 60px;
+        text-align: center;
+    }
+</style>
 <head>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8">
@@ -10,7 +19,7 @@
     <h1><a href="index.html">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
+        <li><a href="2.html" style="color:red;text-decoration:underline;">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
 
