--- a/2.html
+++ b/2.html
@@ -9,6 +9,12 @@
         font-size: 60px;
         text-align: center;
     }
+    #active{
+        color:red;
+    }
+    .saw{
+        color:gray;
+    }
 </style>
 <head>
     <title>WEB1 - CSS</title>
@@ -18,8 +24,8 @@
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html" style="color:red;text-decoration:underline;">CSS</a></li>
+        <li><a href="1.html" class = "saw">HTML</a></li>
+        <li><a href="2.html" class = "saw" id = "active">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
 
